[gd_scene load_steps=9 format=2]

[ext_resource path="res://modules/default/launcher/folder_icon.png" type="Texture" id=1]
[ext_resource path="res://system/components/large_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://modules/default/launcher/highlight_icon.png" type="Texture" id=3]
[ext_resource path="res://modules/default/launcher/views/icons_entry.gd" type="Script" id=4]
[ext_resource path="res://modules/default/launcher/icon_outline.png" type="Texture" id=5]
[ext_resource path="res://system/components/theme_property_applier.gd" type="Script" id=6]
[ext_resource path="res://system/components/modulate_applier.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 42
corner_radius_top_right = 42
corner_radius_bottom_right = 42
corner_radius_bottom_left = 42

[node name="IconsEntry" type="Control"]
margin_left = 90.0
margin_top = 54.0
margin_right = 164.0
margin_bottom = 128.0
rect_min_size = Vector2( 74, 74 )
focus_mode = 2
size_flags_vertical = 4
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -37.0
margin_right = 37.0
margin_bottom = 37.0
rect_min_size = Vector2( 74, 74 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -37.0
margin_right = 37.0
margin_bottom = 37.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Container"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="CircleFrame" type="TextureRect" parent="Container"]
self_modulate = Color( 0.32549, 0.32549, 0.32549, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconLabel" type="Label" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
text = "Go"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
font_values = {
"font": "xxlarge"
}
constant_values = {

}
stylebox_values = {

}
texture_values = {

}

[node name="LabelContainer" type="PanelContainer" parent="Container"]
margin_left = 20.0
margin_top = 88.0
margin_right = 54.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
stylebox_values = {
"panel": "rounded"
}

[node name="MarginContainer" type="MarginContainer" parent="Container/LabelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 21.0
custom_constants/margin_right = 4
custom_constants/margin_top = 0
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0

[node name="Label" parent="Container/LabelContainer/MarginContainer" instance=ExtResource( 2 )]
margin_left = 4.0
margin_right = 16.0
grow_horizontal = 2
text = " "
align = 1
valign = 1
font_values = {
"font": "large"
}
color_values = {
"font_color": "entry_color"
}

[node name="HighlightRing" type="TextureRect" parent="Container"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -46.0
margin_right = 46.0
margin_bottom = 46.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 46, 46 )
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModulateApplier" type="Node" parent="Container"]
script = ExtResource( 7 )
apply_to = NodePath("../HighlightRing")
modulate_type = 1
color_property = "highlight"

[node name="Tween" type="Tween" parent="."]
